<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:background="@null"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:theme="@style/Theme.Material3.DayNight">

    <View
        android:id="@+id/rootClickMask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlBarControllerBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/cvParent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvParent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvBar"
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="7dp"
            app:backgroundTint="?attr/colorOnSurface"
            app:cardElevation="8dp"
            app:cardCornerRadius="2dp"
            app:strokeWidth="0dp" />

        <View
            android:id="@+id/cvBarClickMask"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            app:strokeWidth="0dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlBarControllerSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/rlBarControllerBottom"
        app:layout_constraintStart_toEndOf="@id/cvParent"
        app:layout_constraintTop_toTopOf="@+id/cvParent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvBarSide"
            android:layout_width="4dp"
            android:layout_height="100dp"
            android:layout_marginStart="7dp"
            app:backgroundTint="?attr/colorOnSurface"
            android:layout_marginVertical="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="2dp"
            app:strokeWidth="0dp" />

        <View
            android:id="@+id/cvBarSideClickMask"
            android:layout_width="30dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            app:strokeWidth="0dp" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:backgroundTint="@android:color/transparent"
        android:elevation="8dp"
        android:visibility="visible"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:cardBackgroundColor="?attr/colorSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/transparentOutline"
        app:strokeWidth="0dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:visibility="visible"
            android:clipChildren="true"
            android:clipToPadding="true"
            app:cardBackgroundColor="?attr/colorSurface"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:clipChildren="true"
                android:clipToPadding="true">

                <FrameLayout
                    android:id="@+id/viewport"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:layout_constraintBottom_toTopOf="@+id/ibSuper"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <SurfaceView
                        android:id="@+id/viewSurface"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextureView
                        android:id="@+id/viewTexture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <RelativeLayout
                        android:id="@+id/v_sizePreviewer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/a_bg"
                        android:elevation="5dp"
                        android:visibility="invisible" />
                </FrameLayout>

                <!-- Supporter to keep layout from collapsing during initial measurement -->
                <View
                    android:id="@+id/v_supporter"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/ibSuper"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ibSuper"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@null"
                    android:src="@drawable/three_dot_horiz"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clSuperLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?attr/colorSurface"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/ib_superClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/close_desc"
                        android:src="@drawable/ic_close_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.helper.widget.Flow
                        android:id="@+id/flowButtons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="24dp"
                        app:constraint_referenced_ids="llMinimize,llFullscreen,llCollapse,llClose"
                        app:flow_horizontalGap="24dp"
                        app:flow_verticalGap="24dp"
                        app:flow_maxElementsWrap="2"
                        app:flow_wrapMode="aligned"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/llMinimize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/ib_minimize"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/ic_minimize" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minimize"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llFullscreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/ib_fullscreen"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/ic_maximize" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fullscreen"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llCollapse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/ib_collapse"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/ic_collapse" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/collapse"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/ib_close"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:src="@drawable/ic_close" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/close"
                            android:textSize="12sp" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/ibRightResize"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/resize_desc"
        android:elevation="10dp"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="-15dp"
        app:layout_constraintBottom_toTopOf="@+id/rlBarControllerBottom"
        app:layout_constraintStart_toStartOf="@+id/rlBarControllerSide" />

    <ImageView
        android:id="@+id/iv_ghost"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:alpha="0.5"
        android:elevation="10dp"
        android:src="@drawable/ic_android_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cvParent"
        app:layout_constraintEnd_toEndOf="@+id/cvParent"
        app:layout_constraintStart_toStartOf="@+id/cvParent"
        app:layout_constraintTop_toTopOf="@+id/cvParent" />
</androidx.constraintlayout.widget.ConstraintLayout>
